# njx

./: .gitignore  AGENTS.md  BACKEND_AND_FRONTEND_GUIDE.md  LICENSE  README.md  company.md  docshield.db  package-lock.json  package.json  technical.md
backend/: .frontend-state.json  .gitignore  pyproject.toml  requirements.txt
backend/.secure_blobs/: doc_23ad815f9478a098.blob  doc_3aa11c08.blob  doc_66a1d8ce1de9c653.blob  doc_7f92ab31.blob  doc_c2de358a0974f9b0.blob  tenant_acme_52e6b4_doc_00_0002.blob  tenant_acme_52e6b4_doc_00_0003.blob  tenant_acme_52e6b4_doc_00_0004.blob  tenant_acme_52e6b4_doc_00_0005.blob  tenant_acme_52e6b4_doc_00_0006.blob  tenant_acme_52e6b4_doc_00_0007.blob  tenant_acme_52e6b4_doc_00_0008.blob  tenant_acme_52e6b4_doc_00_0009.blob  tenant_acme_52e6b4_doc_00_0010.blob  tenant_acme_52e6b4_doc_00_0011.blob  tenant_acme_52e6b4_doc_00_0012.blob  tenant_acme_52e6b4_doc_00_0013.blob  tenant_acme_52e6b4_doc_00_0014.blob  tenant_acme_52e6b4_doc_00_0015.blob  tenant_acme_52e6b4_doc_00_0016.blob  tenant_acme_52e6b4_doc_00_0017.blob  tenant_acme_52e6b4_doc_00_0018.blob  tenant_acme_52e6b4_doc_00_0019.blob  tenant_acme_52e6b4_doc_00_0020.blob  tenant_acme_52e6b4_doc_00_0021.blob  tenant_acme_52e6b4_doc_00_0022.blob  tenant_acme_52e6b4_doc_00_0023.blob  tenant_acme_52e6b4_doc_00_0024.blob  tenant_acme_52e6b4_doc_00_0025.blob  tenant_acme_52e6b4_doc_00_0026.blob  tenant_acme_52e6b4_doc_00_0027.blob  tenant_acme_52e6b4_doc_00_0028.blob  tenant_acme_52e6b4_doc_00_0029.blob  tenant_acme_52e6b4_doc_00_0030.blob  tenant_acme_52e6b4_doc_00_0031.blob  (+8 more)
(+114 files in other folders)
